Final banner gradients

--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -2,10 +2,10 @@
 
 $gradient-end: (
     blue: #004aa2,
-    deep-green: lighten(os-color(deep-green), 10%),
+    deep-green: #12a28c,
     gray: #97999b,
     green: #9cd14a,
-    light-blue: lighten(os-color(light-blue), 10%),
+    light-blue: #1ee1f0,
     orange: #faa461,
     red: #e34361,
     yellow: #faea36
