--- a/src/app/components/get-this-title/get-this-title.html
+++ b/src/app/components/get-this-title/get-this-title.html
@@ -101,7 +101,7 @@
             <else>
                 <div if="model.additionalOptions" class="option expander">
                     <a href="." tabindex="{model.submenu === '' ? 0 : -1}">
-                        + {model.additionalOptions} more options
+                        + {model.additionalOptions} more options...
                     </a>
                 </div>
             </if>
