--- a/src/app/components/dialog/dialog.html
+++ b/src/app/components/dialog/dialog.html
@@ -7,7 +7,7 @@
         <div class="title-bar">
             <span id="dialog-title" class="text-title">{model.title}</span>
             <span if="model.htmlTitle" class="html-title" skip="true"></span>
-            <button class="put-away">
+            <button class="put-away" hidden="{model.putAwayHidden}">
                 <span class="fa fa-times"></span>
             </button>
         </div>
