Make "+x additional items" menu bold, fix Study Edge test, adjust background image

--- a/src/app/components/get-this-title/get-this-title.scss
+++ b/src/app/components/get-this-title/get-this-title.scss
@@ -148,7 +148,10 @@
     }
 
     .expander {
-        font-weight: bold;
         margin-left: 4.5rem;
+
+        a {
+            font-weight: bold;
+        }
     }
 }
