Fix header logo and quote layout, other UX fixes (#1517)
* Fix header logo and quote layout

(Firefox issue)

* Cookie notice UX fixes

* Fix spacing of app store buttons

* Make "+x additional items" menu bold, fix Study Edge test, adjust background image

--- a/src/app/components/get-this-title/study-edge/study-edge.scss
+++ b/src/app/components/get-this-title/study-edge/study-edge.scss
@@ -11,6 +11,7 @@
         @include width-up-to($tablet-max) {
             background-image: url('/images/study-edge/graphic-1.svg');
             background-size: calc(10vw + 5rem);
+            margin-left: -0.1rem; // because image has a little edge
             padding-bottom: 9rem;
         }
 
@@ -74,16 +75,20 @@
     .button-group {
         display: grid;
         grid-gap: 1.3rem;
-        grid-template-columns: repeat(auto-fit, minmax(15rem, auto));
-        height: 5rem;
         justify-content: center;
         max-width: 100%;
 
+        @include width-up-to($phone-max) {
+            grid-template-columns: min-content;
+        }
+
+        @include wider-than($phone-max) {
+            grid-template-columns: repeat(2, min-content);
+            padding-left: 1rem;
+        }
+
         .badge {
-            align-items: center;
-            display: grid;
-            height: 100%;
-            width: 13.5rem;
+            height: 4rem;
 
             > img {
                 height: 100%;
