Fix rover-3 accent gradient and logo

--- a/src/app/pages/rover-3/banner/banner.scss
+++ b/src/app/pages/rover-3/banner/banner.scss
@@ -1,7 +1,7 @@
 @import 'pattern-library/core/pattern-library/headers';
 
-$orange-grad-top: #f9b192;
-$orange-grad-bot: #f36b32;
+$orange-grad-top: #ff7e3f;
+$orange-grad-bot: #ffa13a;
 
 .rover-by-openstax #banner {
     padding: 12rem 0 5rem;
