--- a/src/app/components/get-this-title/get-this-title.html
+++ b/src/app/components/get-this-title/get-this-title.html
@@ -98,10 +98,15 @@
                         </span>
                     </a>
                 </div>
+                <div if="model.optionsExpanded" class="option expander">
+                    <a href="." tabindex="{model.submenu === '' ? 0 : -1}">
+                        See fewer options...
+                    </a>
+                </div>
             <else>
                 <div if="model.additionalOptions" class="option expander">
                     <a href="." tabindex="{model.submenu === '' ? 0 : -1}">
-                        + {model.additionalOptions} more options...
+                        + {model.additionalOptions} more option{model.s}...
                     </a>
                 </div>
             </if>
