Blog search bar and search results fixes
Add button to clear search
Keep search term in box when showing search results
When no results are found, display "No matching results were found."

--- a/src/app/pages/blog/search-bar/search-bar.scss
+++ b/src/app/pages/blog/search-bar/search-bar.scss
@@ -20,13 +20,36 @@
         margin: 0;
     }
 
-    input {
-        @extend %non-button-input;
-
+    .input-with-clear-button {
+        align-items: center;
+        display: grid;
         grid-area: input;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+        width: 100%;
 
-        &::placeholder {
-            font-style: italic;
+        input {
+            @extend %non-button-input;
+
+            grid-column: 1;
+            grid-row: 1;
+            height: 100%;
+
+            &::placeholder {
+                font-style: italic;
+            }
+        }
+
+        .clear-search {
+            grid-column: 1;
+            grid-row: 1;
+            justify-self: end;
+            margin-right: 1rem;
+            padding: 0 0.5rem;
+
+            &[hidden] {
+                display: none;
+            }
         }
     }
 
