--- a/src/app/pages/blog/search-bar/search-bar.html
+++ b/src/app/pages/blog/search-bar/search-bar.html
@@ -1,5 +1,10 @@
 <template args="model">
     <h2>{model.title}</h2>
-    <input type="text" placeholder="Search" name="search-input">
+    <div class="input-with-clear-button">
+        <input type="text" placeholder="Search" name="search-input" value="{model.searchString}">
+        <span class="clear-search" role="button" aria-label="clear search" tabindex="0" hidden={model.clearHidden}>
+            <i class="fa fa-times"></i>
+        </span>
+    </div>
     <button class="btn primary" type="button"><i class="fas fa-search"></i></button>
 </template>
