Remove "see fewer options" from Get this Book Correct privacy policy link in cookie notice

--- a/src/app/components/shell/cookie-notice/cookie-notice.html
+++ b/src/app/components/shell/cookie-notice/cookie-notice.html
@@ -1,6 +1,6 @@
 <div class="message">
     We use cookies to optimize your experience on our website. By continuing on the
     website, you are agreeing to our use of cookies. You can find more information,
-    including how to opt out, in our <a href="/privacy">Privacy Policy</a>.
+    including how to opt out, in our <a href="/privacy-policy">Privacy Policy</a>.
 </div>
 <button type="button" class="primary">Got it!</button>
