--- a/src/app/pages/rover-3/getting-started/getting-started.html
+++ b/src/app/pages/rover-3/getting-started/getting-started.html
@@ -15,5 +15,8 @@
         </div>
         <a class="btn blue large" href={model.moreUrl}>{model.moreText}</a>
     </div>
-    <img class="right-bottom" alt="" src="/images/rover-3/rover-profile.svg">
+    <div class="right-bottom">
+        <img alt="" src="/images/rover-3/rover-profile.svg">
+        <div class="edge-mask"></div>
+    </div>
 </template>
