--- a/src/app/pages/rover-3/getting-started/getting-started.scss
+++ b/src/app/pages/rover-3/getting-started/getting-started.scss
@@ -7,6 +7,7 @@ $orange-bg: rgb(255, 128, 73);
     @extend %light-on-dark;
 
     background-image: url('/images/rover-3/orange-bg.svg');
+    background-position: -0.2rem bottom;
     background-repeat: no-repeat;
     background-size: cover;
     color: text-color(white);
@@ -17,7 +18,6 @@ $orange-bg: rgb(255, 128, 73);
     }
 
     @include wider-than($phone-max) {
-        background-position: bottom right;
         padding-top: calc(8rem + 4vw);
     }
 
@@ -75,21 +75,24 @@ $orange-bg: rgb(255, 128, 73);
     }
 
     .right-bottom {
+        bottom: 0;
+        display: flex;
+        justify-content: flex-end;
         position: relative;
-        float: right;
-        transform: rotate(-2deg);
 
-        @include width-up-to($phone-max) {
-            bottom: calc(2.5vw + 0.2rem);
-            max-width: 13rem;
+        .edge-mask {
+            background-color: ui-color(white);
+            bottom: 1.5vw;
+            height: 2rem;
+            position: absolute;
+            transform: rotate(-1.8deg) translateY(80%);
+            width: 100%;
         }
 
-        @include width-between($phone-max, $tablet-max) {
-            bottom: 9.8rem;
-        }
-
-        @include wider-than($tablet-max) {
-            bottom: 5.8rem;
+        img {
+            bottom: calc(3vw - 0.5rem);
+            max-width: 100%;
+            position: relative;
         }
     }
 }
