Fix blog search
Remove "Read more great stories"
Fix byline date format in summary and article
Decode search string when loading from URL bar

--- a/src/app/pages/blog/article-summary/article-summary.html
+++ b/src/app/pages/blog/article-summary/article-summary.html
@@ -8,9 +8,6 @@
         <h3 if="model.subheading">{model.subheading}</h3>
         <div class="article-blurb" data-html="body"></div>
         <a class="go-to" href="/blog/{model.articleSlug}">read more</a>
-        <div class="meta">
-            <span class="author">{model.author}</span>
-            <span class="date">{model.date}</span>
-        </div>
+        <div class="byline" skip="true"></div>
     </div>
 </template>
