--- a/src/app/pages/blog/article/article.scss
+++ b/src/app/pages/blog/article/article.scss
@@ -33,6 +33,16 @@
         padding: 0 $normal-margin;
     }
 
+    .meta {
+        .author{
+            font-style: italic;
+
+            &::after {
+                content: ' | ';
+            }
+        }
+    }
+
     .body {
         img {
             margin-top: $normal-margin;
