--- a/src/app/pages/blog/article/article.html
+++ b/src/app/pages/blog/article/article.html
@@ -8,12 +8,7 @@
         <div class="text-content">
             <h1>{model.title}</h1>
             <h2 if="model.subheading">{model.subheading}</h2>
-            <div class="meta">
-                <p>
-                    <span class="author">{model.author}</span>
-                    <span class="date">{model.date}</span>
-                </p>
-            </div>
+            <div class="byline" skip="true"></div>
             <div class="body"></div>
             <div class="tags" if="model.tags.length">
                 <div class="tag" each="tag in model.tags">{tag}</div>
