--- a/src/app/components/shell/cookie-notice/cookie-notice.scss
+++ b/src/app/components/shell/cookie-notice/cookie-notice.scss
@@ -8,7 +8,7 @@
     margin: $normal-margin;
     max-width: none;
     position: fixed;
-    width: 100%;
+    width: calc(100% - #{2 * $normal-margin});
 }
 
 .cookie-notice {
