--- a/src/app/pages/rover-3/navigator/navigator.scss
+++ b/src/app/pages/rover-3/navigator/navigator.scss
@@ -6,14 +6,9 @@ $indicator-size: 1rem;
     @include set-font(body-large);
 
     @include width-up-to($phone-max) {
-        align-items: flex-start;
         border: thin solid ui-color(form-border);
         border-radius: 0.4rem;
-        display: flex;
-        flex-direction: column;
         margin: $normal-margin;
-        padding-bottom: $normal-margin;
-        padding-top: $normal-margin;
         width: calc(100% - #{2 * $normal-margin});
     }
 
@@ -36,7 +31,16 @@ $indicator-size: 1rem;
 
     .content {
         background-color: ui-color(white);
+        width: 100%;
         z-index: 0;
+
+        @include width-up-to($phone-max) {
+            align-items: flex-start;
+            display: flex;
+            flex-direction: column;
+            padding-bottom: $normal-margin;
+            padding-top: $normal-margin;
+        }
     }
 
     .label {
