Preserve white space in errata descriptions
Plus a little fiddling with column widths

--- a/src/app/pages/errata-detail/detail/detail.scss
+++ b/src/app/pages/errata-detail/detail/detail.scss
@@ -38,6 +38,10 @@ $gray-start: #fcfcfc;
             grid-row-gap: 1rem;
             grid-template-columns: 20rem auto;
         }
+
+        [data-html] {
+            white-space: pre-wrap;
+        }
     }
 
     .note {
