--- a/src/app/pages/errata-summary/table/table.scss
+++ b/src/app/pages/errata-summary/table/table.scss
@@ -73,6 +73,7 @@
             padding: 2rem;
             text-align: left;
             vertical-align: top;
+            white-space: pre-wrap;
             word-wrap: break-word;
         }
 
@@ -86,7 +87,7 @@
         }
 
         .mid-wide {
-            width: 15rem;
+            width: 17rem;
         }
     }
 
