--- a/src/app/components/get-this-title/get-this-title.html
+++ b/src/app/components/get-this-title/get-this-title.html
@@ -9,7 +9,7 @@
                 </a>
             </div>
             <div if="!model.comingSoon && model.webviewLink" class="option">
-                <a href="{model.webviewLink}"
+                <a href="{model.webviewLink}" data-local="{model.isRex}"
                     tabindex="{model.submenu === '' ? 0 : -1}" data-submenu="{model.submenu}">
                     <span class="fa fa-laptop"></span>
                     <span class="text">View online</span>
