Fix logout menu for mobile
Was being created anew on each update. Oops.

--- a/src/app/components/shell/header/main-menu/main-menu.html
+++ b/src/app/components/shell/header/main-menu/main-menu.html
@@ -20,9 +20,7 @@
                 <a href="{model.login}" class="pardotTrackClick" data-local="true" role="menuitem">Login</a>
             </li>
         <else>
-            <li class="login dropdown">
-                <div class="login-dropdown rightmost" skip="true"></div>
-            </li>
+            <li class="login-dropdown rightmost" skip="true"></li>
         </if>
     </ul>
     <button class="expand" aria-haspopup="true" aria-label="Toggle Meta Navigation Menu" tabindex="0">
