--- a/src/app/components/select/select.scss
+++ b/src/app/components/select/select.scss
@@ -129,10 +129,11 @@ select {
         }
 
         > .option {
+            @include set-font(helper-label);
+
             background-color: ui-color(white);
-            font-weight: 600;
-            line-height: 1;
-            padding: 0.5rem 1rem;
+            font-weight: bold;
+            padding: 0.2rem 1rem;
             width: 100%;
 
             &:hover,
