Rely on fonts.scss in pattern-library

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,4 @@
-@import 'fonts';
+@import 'pattern-library/core/pattern-library/fonts';
 @import 'pattern-library/core/pattern-library/headers';
 @import 'pattern-library/core/pattern-library/elements/document';
 @import 'pattern-library/core/pattern-library/elements/typography';
