--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,10 +1,9 @@
-@import 'fonts';
+@import 'pattern-library/core/pattern-library/fonts';
 @import 'pattern-library/core/pattern-library/headers';
 @import 'pattern-library/core/pattern-library/elements/document';
 @import 'pattern-library/core/pattern-library/elements/typography';
 
 html {
-    font-weight: 300;
     overflow-x: hidden;
 }
 
