--- a/src/app/pages/press/press-article.html
+++ b/src/app/pages/press/press-article.html
@@ -1,4 +1,4 @@
-<div class="article page" skip="true"></div>
+<div class="article text-content" skip="true"></div>
 <div class="text-content">
     <h1>Other press releases</h1>
     <div class="other press-releases" skip="true"></div>
