--- a/src/app/components/shell/header/main-menu/main-menu.html
+++ b/src/app/components/shell/header/main-menu/main-menu.html
@@ -1,12 +1,9 @@
 <template args="model">
     <span class="logo-wrapper">
-        <span class="logo">
-            <a href="/" aria-label="Home Page">
-                <img class="logo-color" src="/images/logo.svg" alt="OpenStax logo">
-                <img class="logo-white" src="/images/logo-white.svg" alt="OpenStax logo">
-            </a>
-        </span>
-
+        <a href="/" class="logo" aria-label="Home Page">
+            <img class="logo-color" src="/images/logo.svg" alt="OpenStax logo">
+            <img class="logo-white" src="/images/logo-white.svg" alt="OpenStax logo">
+        </a>
         <span class="logo-quote">Access. The future of education.</span>
     </span>
 
