--- a/src/app/components/shell/header/main-menu/main-menu.scss
+++ b/src/app/components/shell/header/main-menu/main-menu.scss
@@ -29,7 +29,7 @@
 
         align-items: center;
         display: flex;
-        padding: 1.2rem 1.6rem;
+        padding: 0 1.6rem;
 
         @at-root .active#{&} {
             align-items: flex-start;
@@ -135,18 +135,15 @@
     }
 
     .logo {
+        display: block;
         height: 2.8rem;
 
-        a {
-            height:100%;
-
-            &:active,
-            &:focus,
-            &:hover {
-                &::after {
-                    background-color: transparent;
-                    box-shadow: none;
-                }
+        &:active,
+        &:focus,
+        &:hover {
+            &::after {
+                background-color: transparent;
+                box-shadow: none;
             }
         }
 
